Some tidying up

--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
     <div id="app">
       <div class="jumbotron">
         <h1 class="display-3">Crypto Vue</h1>
-        
       </div>
-    
       <div class="row mt-3 mb-3">
         <div class="col-md-12">
           <button type="button" class="btn btn-primary float-right" v-on:click="updateButton">Update</button>
-          <img src="ajax-loader.gif" class="float-right" v-if="loading" style="margin: 8px;" />
+          <img src="./img/ajax-loader.gif" class="float-right" v-if="loading" style="margin: 8px;" />
         </div>
       </div>
       <div class="row">
